--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* #wrapper { */
+   /* display: inline-block;
+    position: absolute;
+    height: 100%;
+    width: 100%;  */
+    background-color: purple;
+    /* For browsers that do not support gradients */
+    background-image: linear-gradient( pink, purple);
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+    
+/* } */
 }
 
 code {
