--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -1,42 +1,31 @@
-#wrapper {
+/* #wrapper {
     display: inline-block;
     position: absolute;
     height: 100%;
     width: 100%;
     background-color: purple;
     /* For browsers that do not support gradients */
-    background-image: linear-gradient( pink, purple);
+    /* background-image: linear-gradient( pink, purple); */
     
-}
+/* } */ 
 
 input {
-   
     padding: 12px 20px;
-   
     border: 1px solid #ccc;
     box-sizing: border-box;
-    
      display: block;
      margin: auto;
-    
-     width: 50%;
+     width: 60vh;
      margin-top: 5%;
    
 }
 
-/* input[type=email] {
-    top: 30%;
-}
 
-input[type=password] {
-    
-   
-} */
 #logo{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 55%;
+    width: 55vh;
     height: 25%;
     margin-top: 5%;
     /* position: absolute;
@@ -66,6 +55,7 @@ button {
     display: block;
     margin: auto;
     margin-top: 5%;
+    width: 40vh;
 }
 
 button:hover {
