--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -1,21 +1,17 @@
-/* #wrapper {
-    display: inline-block;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: purple;
-    /* For browsers that do not support gradients */
-    /* background-image: linear-gradient( pink, purple); */
-    
-/* } */ 
-
+ 
+#langButtons{
+    display: block;
+    margin: auto;
+    margin-top: 5%;
+    width: 40vh;
+}
 input {
     padding: 12px 20px;
     border: 1px solid #ccc;
     box-sizing: border-box;
      display: block;
      margin: auto;
-     width: 60vh;
+     width: 50vh;
      margin-top: 5%;
    
 }
@@ -28,19 +24,14 @@ input {
     width: 55vh;
     height: 25%;
     margin-top: 5%;
-    /* position: absolute;
-    left:40%;
-    size: 80vh; */
+   
 }
 button {
-    /* margin-top: 45%;
-    margin-left: 40%; */
     box-shadow: inset 0px 1px 0px 0px #efdcfb;
     background: linear-gradient(to bottom, #dfbdfa 5%, #bc80ea 100%);
     background-color: #dfbdfa;
     border-radius: 6px;
     border: 1px solid #c584f3;
-    display: inline-block;
     cursor: pointer;
     color: #ffffff;
     font-family: Arial;
@@ -49,9 +40,6 @@ button {
     padding: 6px 24px;
     text-decoration: none;
     text-shadow: 0px 1px 0px #9752cc;
-    /* position: absolute;
-    top: 50%;
-    left: 42%; */
     display: block;
     margin: auto;
     margin-top: 5%;
