--- a/src/pages/main user page/mainUserPage.css
+++ b/src/pages/main user page/mainUserPage.css
@@ -1,4 +1,17 @@
-#smallLogo{
-    width: 20vh;
-    height: 10vh;
+#mainUPWrapper{
+    text-align: center;
+}
+#languages{
+    display: inline;
+}
+#navbar{
+    float: left;
+    
+    /* position: absolute;
+    right: 0%;
+    top: 0%; */
+}
+ #smallLogo{
+    display: inline;
+   
 }
