--- a/src/Components.css
+++ b/src/Components.css
@@ -1,20 +1,22 @@
-#languages{
+/* #languages{
     display: inline;
-}
-    #smallLogo{
+} */
 
-        /* box-sizing: content-box;   */
-        /* height: fit-content; */
-        display: inline;
-    
-}
 #navbar{
+    display: inline-block;
     position: absolute;
-    height:7%;
+    height:10%;
     width: 100%;
-    border-color: black;
-    border-style: groove;
+    border: yellow;
+    border-style: solid;
     
 }
+        #smallLogo{
+           /* display: inline-block; */
+            /* max-width:100%; */
+           max-height:100%; 
+           /* object-fit: contain; */
+           float: right;
+        }
     
     
