--- a/src/pages/main user page/mainUserPage.css
+++ b/src/pages/main user page/mainUserPage.css
@@ -8,7 +8,7 @@
     /* opacity: 100%; */
     /* background: clear; */
     border: black;
-    overflow: scroll;
+    /* overflow: scroll; */
     border-style: groove;
     text-align: center;
 }
