--- a/src/Components.css
+++ b/src/Components.css
@@ -3,20 +3,18 @@
 } */
 
 #navbar{
-    display: inline-block;
-    position: absolute;
+    
+    position: fixed;
     height:10%;
     width: 100%;
     border: yellow;
     border-style: solid;
     
 }
-        #smallLogo{
-           /* display: inline-block; */
-            /* max-width:100%; */
-           max-height:100%; 
-           /* object-fit: contain; */
-           float: right;
-        }
+#smallLogo{
+    position: relative;
+    width: 22vh;
+    float: right;
+}
     
     
