--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -14,19 +14,17 @@
     margin-top: 7%;
     cursor: pointer;
     z-index: 5;
-  overflow: auto;
+  /* overflow: auto; */
 }
 #globus{  
-    position: absolute;   
-    top: 0%;
-    max-width:100%;
-    max-height:100%; 
+
+    height: 6vh;
+    width: 6vh;
 }
 
 #languages
 {
-    align-items: right;
-    /* margin-right: 9%; */
+    
     cursor: pointer;
     float: right;
 }
