--- a/src/Components.css
+++ b/src/Components.css
@@ -1,6 +1,4 @@
-/* #languages{
-    display: inline;
-} */
+
 
 #navbar{
     
@@ -16,5 +14,22 @@
     width: 22vh;
     float: right;
 }
-    
-    
+#windowComp{
+    position: fixed;
+    height: 70vh;
+    width: 85vh;
+    top: 20%;
+    left: 30%;
+    background-color: lawngreen;
+
+}   
+.dark-overlay {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.35);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+  }
