--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,20 +1,20 @@
 .dropdown {
-    /* display: inline-block; */
     cursor: pointer;
-    z-index: 999;
+   
 }
 
 .dropdown__content {
     display: none;
-    position: absolute;
+    /* position: absolute; */
     cursor: pointer;
 }
 
 .dropdown--active  .dropdown__content {
     display: block;
-    margin-top: 7%;
+    position: absolute;
     cursor: pointer;
-    z-index: 999;
+    margin-top: 7%;
+   
   /* overflow: auto; */
 }
 #globus{  
@@ -35,10 +35,13 @@
 ul
 {
     list-style-type: none;
+    
 }
 .langButtons{
+    cursor: pointer;
     width: 12vh;
     text-align: center;
     padding: 0px;
+    
 
 }
