--- a/src/index.css
+++ b/src/index.css
@@ -2,45 +2,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  /* -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
-  
-  /* For browsers that do not support gradients */
-  /* background-color: purple;
-  background-image: linear-gradient( pink, purple);
 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-   */
-  /* display: block;
-position: absolute; */
-/* left: 3%; */
-  /* position: fixed; */
- /* left: 10vh;
- top: 3.7vh; */
- /* height: 100%;
- width: 100%; */
  
- body, html {
-  height: 100%;
+ body {
   margin: 0;
 }
 
 #root {
-  /* The image used */
   
   /* For browsers that do not support gradients */
   background-color: purple;
+  /* The image used */
   background-image: linear-gradient( pink, purple);
-
-
+  position: fixed;
   /* Full height */
   height: 100%; 
+  width: 100%;
+
 
   /* Center and scale the image nicely */
   background-position: center;
