--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -5,43 +5,35 @@
 
 .dropdown__content {
     display: none;
-    /* position: absolute; */
     cursor: pointer;
 }
 
 .dropdown--active  .dropdown__content {
     display: block;
-    position: absolute;
+    float: left;
+    margin-top: 20%;
     cursor: pointer;
-    margin-top: 7%;
-   
-  /* overflow: auto; */
+
 }
 #globus{  
-
     height: 6vh;
     width: 6vh;
 }
 
 #languages
 {
-    
     cursor: pointer;
     float: right;
+    margin-top: 0%;
 }
-
-
 
 ul
 {
     list-style-type: none;
-    
 }
 .langButtons{
     cursor: pointer;
     width: 12vh;
     text-align: center;
     padding: 0px;
-    
-
 }
