--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,10 @@ code {
 #root {
   
   /* For browsers that do not support gradients */
-  background-color: purple;
+  /* background-color: purple; */
   /* The image used */
-  background-image: linear-gradient( pink, purple);
+  /* background-image: linear-gradient( pink, purple); */
+  background-image: white;
   position: fixed;
   /* Full height */
   height: 100%; 
