--- a/src/Components.css
+++ b/src/Components.css
@@ -26,7 +26,7 @@
 .dark-overlay {
     display: none;
     background-color: rgba(0, 0, 0, 0.35);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
