--- a/src/Components.css
+++ b/src/Components.css
@@ -43,3 +43,27 @@
         width: 10vh;
         float: right;
   }
+
+  /* .details
+  {
+    height: 10vh;
+  }
+
+  #edit
+  {
+      /* position: absolute; */
+      /* top:12%; */
+      /* height: 20%; */
+        /* width:100%;
+      display: inline-block;
+      z-index: 500;
+      max-height: 100%;
+      overflow: auto;
+  }
+
+  #woman_form
+  {
+      float: right;
+  } */ 
+
+  
