--- a/src/Components.css
+++ b/src/Components.css
@@ -1,20 +1,20 @@
-
-
 #navbar{
     
     position: fixed;
     height:10%;
     width: 100%;
     border: yellow;
-    border-style: solid;
-    
+    border-style: solid; 
 }
+
 #colordButton{
 max-width: 100%;
 }
+
 #serchform{
 max-width: 100%;
 }
+
 #smallLogo{
     position: relative;
     width: 18vh;
@@ -22,44 +22,57 @@ max-width: 100%;
     float: right;
 }
 
-
   #fblogo{
       height: 10vh;
       width: 10vh;
       float: right;
     }
-    #ytlogo{
+    
+#ytlogo
+{
         height: 10vh;
         width: 10vh;
         float: right;
   }
 
  #navList{
-/* justify-items: right; */
-/* width: 100%; */
-float:right
+    /* justify-items: right; */
+    /* width: 100%; */
+    float:right
      /* float: right; */
  }
-  /* .details
-  {
-    height: 10vh;
-  }
 
-  #edit
-  {
-      /* position: absolute; */
-      /* top:12%; */
-      /* height: 20%; */
-        /* width:100%;
-      display: inline-block;
-      z-index: 500;
-      max-height: 100%;
-      overflow: auto;
-  }
+  label {
+    vertical-align: top;
+}
 
-  #woman_form
-  {
-      float: right;
-  } */ 
+.modal-body
+{
+    overflow-x: none;
+}
+
+#woman_form
+{
+    display: flex;
+    /* display: inline-block; */
+    flex-wrap: wrap;
+    border-collapse:collapse;
+    width:100%;
+    justify-items: center;
+    text-align: center;
+    overflow-x: none;
+    max-height: 100%;
+    overflow-y: auto;
+}
+
+.form-group
+{
+    padding: 3vh;
+    /* flex-grow: 1; */
+    display: table-cell;
+    white-space: nowrap;
+}
+
+
 
   
