--- a/src/index.css
+++ b/src/index.css
@@ -8,27 +8,27 @@ code {
   margin: 0;
 }
 
-#root {
-  
+/* #root {
+   */
   /* For browsers that do not support gradients */
   /* background-color: purple; */
   /* The image used */
   /* background-image: linear-gradient( pink, purple); */
-  background-image: white;
-  position: fixed;
+  /* background-image: white; */
+  /* position: fixed; */
   /* Full height */
-  height: 100%; 
-  width: 100%;
+  /* height: 100%; 
+  width: 100%; */
 
 
   /* Center and scale the image nicely */
-  background-position: center;
+  /* background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-#wrapper{
-  position: fixed;
-  height: 100%;
+} */
+/* #wrapper{
+  /* position: fixed; */
+  /* height: 100%;
   width: 100%;
-}
+}  */
 
