--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -14,6 +14,16 @@ input {
     margin-top: 3%;
     outline:none;    
 }
+#loginbtn {
+    display: block;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    margin: auto;
+    width: 40vh;
+    border-radius: 20px 20px;
+    margin-top: 3%;
+    outline:none;    
+}
 #buttonWrapper{
     justify-content: space-around;
 }
