--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -14,6 +14,7 @@
     float: left;
     margin-top: 0;
     cursor: pointer;
+    padding: 1vh;
     /* width: 100%; */
     
 }
@@ -27,7 +28,7 @@
 } */
 #languages
 {
-    
+
     cursor: pointer;
     margin-top: 0%;
 }
