--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -20,8 +20,8 @@
 }
 #globus{  
     float: right;
-    height:8vh;
-    width: 8vh;
+    height:40px;
+    width: 40px;
 }
 /* #langlist{
     width: 50vh;
