--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -43,7 +43,7 @@ ul
     cursor: pointer;
     width: 100px;
     padding: 5px;
-    background-color: blueviolet;
+    background-color: rgb(165, 4, 165);
     color: white;
-
+    font-weight: bold;
 }
