--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -1,11 +1,11 @@
-#addBtn
-{
-    position: absolute;
-    bottom: 2vh;
-}
 
 
 #pic
 {
     border-radius: 50%;
+}
+
+#womanContainer{
+    width: 80%;
+    /* direction: rtl; */
 }
