--- a/src/Components.css
+++ b/src/Components.css
@@ -83,3 +83,14 @@
     height: 50px;
     width: 50px;
 }
+#pictureCarousel {
+    position: absolute;
+    width: 50%;
+    height: 30%;
+    left: 25%;
+    margin-top: 3%;
+}
+
+img {
+    border-radius: 3%;
+}
