--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -1,9 +1,9 @@
-#langButtons{
+/* #langButtons{
     display: block;
     margin: auto;
     margin-top: 5%;
     width: 40vh;
-}
+} */
 input {
     display: block;
     padding: 12px 20px;
@@ -31,11 +31,13 @@ input {
 
 #bigLogo{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    /* justify-self: center; */
+    /* left: 50%;
+    right: 50%; */
     width: 55vh;
     height: 30vh;
-    
+    /* transform: translate(-30vh, -55vh); */
     
 }
 #colordButton {
@@ -76,3 +78,8 @@ input {
     text-align: center;                                  
 }
                                      
+#languages{
+    position: absolute;
+    top:0%;
+    right:0%;
+}
