--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -78,7 +78,7 @@ input {
     text-align: center;                                  
 }
                                      
-#languages{
+#langBtnWeapper{
     position: absolute;
     top:0%;
     right:0%;
