--- a/src/Components.css
+++ b/src/Components.css
@@ -94,3 +94,19 @@
 img {
     border-radius: 3%;
 }
+
+  .modal-content{
+    height: 100%;    
+  }  
+  .modal-dialog {
+    height: 100%;
+    padding-top: 3%;
+  } 
+    .modal-title{
+        text-align: center;
+        width: 100%;
+    }
+    .modal-body{
+        height: 93%;
+    }
+   
