--- a/src/Components.css
+++ b/src/Components.css
@@ -116,3 +116,12 @@ img {
     width: 80%;
     margin: auto;
 }
+
+.clearBtn{
+
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden; 
+}
