--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -4,6 +4,7 @@
     margin-top: 5%;
     width: 40vh;
 } */
+
 input {
     display: block;
     padding: 12px 20px;
@@ -12,8 +13,9 @@ input {
     width: 40vh;
     border-radius: 20px 20px;
     margin-top: 3%;
-    outline:none;    
+    outline: none;
 }
+
 #loginbtn {
     display: block;
     padding: 12px 20px;
@@ -22,24 +24,21 @@ input {
     width: 40vh;
     border-radius: 20px 20px;
     margin-top: 3%;
-    outline:none;    
+    outline: none;
 }
-#buttonWrapper{
+
+#buttonWrapper {
     justify-content: space-around;
 }
 
-
-#bigLogo{
+#bigLogo {
     display: block;
     margin: auto;
-    /* justify-self: center; */
-    /* left: 50%;
-    right: 50%; */
     width: 55vh;
     height: 30vh;
-    /* transform: translate(-30vh, -55vh); */
-    
+    padding-top: 6%;
 }
+
 #colordButton {
     box-shadow: inset 0px 1px 0px 0px #efdcfb;
     background: linear-gradient(to bottom, #dfbdfa 5%, #bc80ea 100%);
@@ -56,30 +55,35 @@ input {
     text-shadow: 0px 1px 0px #9752cc;
     margin: auto;
     margin-top: 3%;
-    width: 25vh; 
+    width: 25vh;
     display: block;
-    outline:none;
+    outline: none;
 }
 
 #colordButton:hover {
     background: linear-gradient(to bottom, #bc80ea 5%, #dfbdfa 100%);
     background-color: #bc80ea;
 }
-#header{
+
+#header {
     position: fixed;
-    height:10%;
+    height: 10%;
     width: 100%;
 }
-#main{
-    
-    position: fixed;   
+
+#main {
+    position: fixed;
     min-height: 80%;
     width: 100%;
-    text-align: center;                                  
+    text-align: center;
 }
-                                     
-#langBtnWeapper{
+
+#langBtnWeapper {
     position: absolute;
-    top:0%;
-    right:0%;
+    top: 0%;
+    right: 0%;
+}
+
+.loginContainer {
+    text-align: center
 }
