border's and description's imag

--- a/src/Components.css
+++ b/src/Components.css
@@ -86,7 +86,7 @@
 }
 
 img {
-    border-radius: 3%;
+    border-radius: 25px;
 }
 
 .modal-content {
@@ -124,4 +124,5 @@ img {
 
 .pictureDiscription {
     background-color: rgba(0, 0, 0, 0.329);
+    border-radius: 25px;
 }
