--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -8,7 +8,8 @@
 
 #womanContainer{
   
-    width: 80%;
+    width: 65%;
+    font-size: larger;
     margin: auto;
     text-align: justify;
   text-justify: inter-word;
@@ -16,3 +17,6 @@
 h1{
     text-align: center;
 }
+
+
+
