--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ code {
  
  body {
   margin: 0;
-    font-family: 'Open-Sans-Hebrew'!important;
+    /* font-family: 13px/20px PTSansRegular,Arial,Helvetica,sans-serif; */
 }
 .modal-header{
   background-color: rgb(165, 4, 165);
