working on form

--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -1,6 +1,3 @@
-
-
-
 label {
     vertical-align: top;
   
@@ -15,18 +12,27 @@ background-color: purple;
     overflow-x: none;
 }
 
-#woman_form
+.modal-content
+{
+    overflow-x: none;
+    overflow-y: auto;
+}
+
+.form_content 
 {
     display: flex;
+    border:1px;
+    border-color: #222222;
     /* display: inline-block; */
     flex-wrap: wrap;
     border-collapse:collapse;
-    width:100%;
+    /* width:100%; */
     justify-items: center;
     text-align: center;
     overflow-x: none;
     max-height: 100%;
     overflow-y: auto;
+
 }
 
 .form-group
