--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -6,10 +6,15 @@ label {
 {
 background-color: purple;            
 }
-
+.modal-dialog{
+margin: auto;
+padding-bottom: 3%;
+}
 .modal-body
 {
     overflow-x: none;
+    overflow-y: auto;
+    height: 100%;
 }
 
 .modal-content
@@ -26,11 +31,12 @@ background-color: purple;
     /* display: inline-block; */
     flex-wrap: wrap;
     border-collapse:collapse;
-    /* width:100%; */
+    width:100%;
+    height:100%;
     justify-items: center;
     text-align: center;
     overflow-x: none;
-    max-height: 100%;
+    /* max-height: 100%; */
     overflow-y: auto;
 
 }
@@ -39,7 +45,7 @@ background-color: purple;
 {
     padding: 3vh;
     /* flex-grow: 1; */
-    display: table-cell;
+    display: inline-flex;
     white-space: nowrap;
 }
 
