--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -44,10 +44,11 @@ padding-bottom: 3%;
 
 .form-group
 {
-    padding: 3vh;
+    padding: 0vh;
     /* flex-grow: 1; */
     display: inline-flex;
     white-space: nowrap;
+    width: 90%;
 }
 .langTabs{
  margin: 20px; 
@@ -62,7 +63,7 @@ padding-bottom: 3%;
 .starrating > label:before { 
   content: "\f005"; /* Star */
   margin: 2px;
-  font-size: 2em;
+  font-size: 4em;
   font-family: FontAwesome;
   display: inline-block; 
   cursor: pointer;
@@ -84,6 +85,8 @@ padding-bottom: 3%;
 .starrating{
     /* overflow: auto; */
     max-width: 30%;
+    /* max-width: 100%; */
+
 }
 /* --------------------------- */
 
@@ -94,6 +97,7 @@ padding-bottom: 3%;
 
 .details2{
     width: 180%;
+    /* padding-top: 0%; */
 }
     
 
