--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -125,11 +125,7 @@ padding-bottom: 3%;
     margin-left: -80px;
   }
 
-  /* #oneone:target {
-    background: red;
-
-} */
-
+/* style the Englsh Arabic עברית on the edit woman form */
 .highlight{     
     font-weight:bold;
     /* background: rgb(100, 93, 93); */
