changed database sructure

--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -128,6 +128,6 @@ padding-bottom: 3%;
 /* style the Englsh Arabic עברית on the edit woman form */
 .highlight{     
     font-weight:bold;
-    /* background: rgb(100, 93, 93); */
+    /* background: rgba(213, 30, 250, 0.603); */
     font-size: 21px;
    }
