--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -15,7 +15,7 @@ padding-bottom: 3%;
 {
     overflow-x: none;
     overflow-y: auto;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .modal-content
