feedback table works fine

--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -125,6 +125,15 @@ padding-bottom: 3%;
    
 }
 
+.detailsL{
+
+
+    border-color: purple;
+    /* padding-left: 20%; */
+    /* inline-size: 50%; */
+
+}
+
 .detail{
     /* padding-top: 4%; */
     border-radius: 15%;
@@ -221,3 +230,29 @@ padding-bottom: 3%;
     border-radius: 10%;
     border-color: rebeccapurple;
 }
+
+.myNewClass{
+
+    padding-right: 35%;
+
+}
+
+#myAdd{
+
+    /* height: 13%; */
+    height: auto;
+
+}
+
+.quotesClass{
+
+    padding-right: 10%;
+
+    
+
+}
+
+/* #fill20{
+
+    padding-top: 20%;
+} */
