--- a/src/Components.css
+++ b/src/Components.css
@@ -79,22 +79,72 @@
 
 #pictureCarousel {
     position: absolute;
-    width: 50%;
-    height: 30%;
+    width: 800px;
+    height: 550px;
     left: 25%;
     margin-top: 1%;
     margin-bottom: 3%;
-
+    background-color: rgb(59, 57, 57);
+    border-radius: 25px;
 }
 
-
-.d-block{
-/* crop image to fit dimensions   */
+.d-block {
+    /* crop image to fit dimensions   */
     object-fit: cover;
-} 
+}
 
-img {
-    border-radius: 25px;
+#carouselInner {
+    height: 100%;
+}
+
+.details {
+    height: 100%;
+}
+
+.roundedImg {
+    /* display: inline; */
+    object-fit: cover;
+    margin-top: 4%;
+    margin-left: 12%;
+    border-radius: 50%;
+    border-style: solid;
+    border-color: rgb(206, 206, 206);
+    border-width: 3px;
+    box-shadow: 0 0 10px rgb(206, 206, 206);
+}
+
+.displayName {
+    position: absolute;
+    margin-top: 10%;
+    margin-right: 12%;
+    color: rgb(206, 206, 206);
+    -webkit-text-stroke: rgb(190, 74, 248);
+    -webkit-text-stroke-width: 0.5px;
+    text-shadow: 0 0 10px rgb(190, 74, 248);
+}
+
+.highlights {
+    position: absolute;
+    margin-top: 13%;
+    color: rgb(206, 206, 206);
+    z-index: 5;
+    /* text-align: justify ; */
+    text-align: center;
+    text-justify: inter-word;
+}
+
+.pictureDiscription {
+    position: absolute;
+    z-index: 5;
+}
+
+#carouselExampleIndicators {
+    width: 100%;
+    height: 100%;
+}
+
+#carouselIndicators {
+    position: absolute;
 }
 
 .modal-content {
@@ -130,21 +180,16 @@ img {
     overflow: hidden;
 }
 
-.pictureDiscription {
-    background-color: rgba(0, 0, 0, 0.329);
-    border-radius: 25px;
-}
-#bottom{
+#bottom {
     position: absolute;
     justify-content: center;
     bottom: 0%;
 }
 
-#feedbackTable{
+#feedbackTable {
     padding-top: 10%;
     /* width: 100%; */
     padding-right: 10%;
     padding-left: 10%;
     text-align: right;
-
 }
