--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -3,17 +3,24 @@
 #profilePic
 {
     border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
     float: left;
+
 }
 
-#womanContainer{
-  
-    width: 65%;
-    font-size: larger;
-    margin: auto;
-    text-align: justify;
-  text-justify: inter-word;
+#shoWoman{
+margin: auto;
+width: 65%;
+font-size: larger;
+margin: auto;
+text-align: justify;
+text-justify: inter-word;
 }
+/* #womanContainer{
+  
+} */
 h1{
     text-align: center;
 }
