buttons and form reshaping

--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -108,11 +108,12 @@ padding-bottom: 3%;
 }
 
 .details2{
+    
     width: 180%;
     padding-top: 0%;
-    padding-left: 3%;
+    /* padding-left: 3%; */
     border-color: purple;
-    border-radius: 5%;
+    /* border-radius: 5%; */
 
 }
 
