--- a/src/pages/Admin Page/AdminPage.css
+++ b/src/pages/Admin Page/AdminPage.css
@@ -12,8 +12,8 @@
     position: absolute;
     margin-top:0%;
     width:100%;
-    left:30%;
-    font-size: 50px;
+    left:26%;
+    font-size: 65px;
   }
   
 
@@ -46,7 +46,7 @@
     width: 450px;
     height: 100px;
     border-radius: 30px;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 600;
     color: white;
     background-size: 100% 100%;
@@ -80,3 +80,16 @@
     }
   }
 
+  .backBtn{
+
+
+    padding-left: 3%;
+    padding-top: 1%;
+
+  }
+
+  #backBtn{
+
+    width: 10%;
+    font-size: xx-large;
+  }
