--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -47,7 +47,7 @@ padding-bottom: 3%;
 
     /* position: absolute; */
     /* padding-top: 1%; */
-    padding-left: 75%;
+    /* padding-left: 75%; */
 
 }
 
@@ -60,7 +60,7 @@ padding-bottom: 3%;
 {
     padding: 0vh;
     /* flex-grow: 1; */
-    display: inline-flex;
+    /* display: inline-flex; */
     white-space: nowrap;
     width: 90%;
 
@@ -110,7 +110,7 @@ padding-bottom: 3%;
 .details2{
     
     width: 180%;
-    padding-top: 0%;
+    /* padding-top: 0%; */
     /* padding-left: 3%; */
     border-color: purple;
     /* border-radius: 5%; */
@@ -122,6 +122,7 @@ padding-bottom: 3%;
     padding-left: 0%;
     /* position: 0%; */
     /* width: 25%; */
+    width: 35%;
     border-color: purple;
    
 }
@@ -185,34 +186,44 @@ padding-bottom: 3%;
    }
 
    #line2{
+    font-weight:bold;
     font-size: larger;
     padding-top: 3%;
-    padding-left: 4%;
+    padding-left: 40%;
     color: purple;
+    /* font-size: xx-large; */
 
     /* padding-right: 10%; */
 }
 
 #line3{
 
+    font-weight:bold;
     font-size: larger;
     padding-top: 5%;
     border-color: purple;
-    padding-left: 2%;
+    padding-left: 33%;
     color: purple;
+    /* padding-right: 30%; */
 }
 
 .bdayclass{
     /* position: absolute; */
-    padding-left: 0%;
+    /* padding-left: 0%; */
+    /* padding-right: 39%; */
+    font-size: x-large;
+    padding-right: 10%;
+    /* width: 73.5%; */
+    /* padding-right: 10%; */
 }
 
 
 #lineName{
 
-  padding-left: 1%; 
-  padding-top: 5%; 
-  font-size: larger;
+  font-weight:bold;
+  padding-left: 48%; 
+  /* padding-top: 4%;  */
+  font-size: xx-large;
   color: purple;
 }
 
@@ -280,3 +291,22 @@ padding-bottom: 3%;
     flex-flow: column;
     justify-content: space-around;
 } 
+
+#death{
+
+    border-color: purple;
+    width: 45%;
+    font-size: 1em;
+    margin-right: 33%;
+    /* padding-right: 30%; */
+    /* padding-right: 10%; */
+}
+    
+
+#birth{
+
+
+    width: 40%;
+    /* padding-right: 10%; */
+
+}
