--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -53,6 +53,7 @@ padding-bottom: 3%;
 
 #step2{
     display: none;
+    margin-left: 10%;
 }
 
 
@@ -66,7 +67,7 @@ padding-bottom: 3%;
 
 }
 .langTabs{
- padding: 20px; 
+ padding: 16px; 
 }
 
   
@@ -122,7 +123,7 @@ padding-bottom: 3%;
     padding-left: 0%;
     /* position: 0%; */
     /* width: 25%; */
-    width: 35%;
+    width: 100%;
     border-color: purple;
    
 }
@@ -244,8 +245,8 @@ padding-bottom: 3%;
 
 .myNewClass{
 
-    padding-right: 35%;
-    padding-bottom: 20%;
+    padding-right: 10%;
+    /* padding-bottom: 20%; */
 
 }
 /* #fill20,#fill21{
@@ -305,8 +306,21 @@ padding-bottom: 3%;
 
 #birth{
 
-
     width: 40%;
     /* padding-right: 10%; */
+
+}
+
+#submit1{
+
+    margin-left: 50%;
+
+}
+
+.detailsName{
+
+    padding-left: 0%;
+    width: 33%;
+    border-color: purple;
 
 }
