--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -9,7 +9,11 @@
     float: left;
 
 }
-
+#main_details{
+    position: static;
+    max-height: fit-content
+    /* width: 100%; */
+}
 #shoWoman{
 margin: auto;
 width: 65%;
