--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -7,11 +7,22 @@
     width: 200px;
     object-fit: cover;
     float: left;
-
+    
+}
+#dispName{
+    justify-self: baseline;
 }
 #main_details{
-    position: static;
-    max-height: fit-content
+    
+    position: sticky;
+    position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  height: 200px;
+  /* justify-content: baseline; */
+  align-items: baseline;
+    /* max-height: fit-content */
     /* width: 100%; */
 }
 #shoWoman{
