--- a/src/Components.css
+++ b/src/Components.css
@@ -181,7 +181,7 @@
 }
 
 #bottom {
-    position: fixed;
+    position: relative;
     display: flex;
     justify-content: center;
     margin-bottom: 0%;
