--- a/src/Components.css
+++ b/src/Components.css
@@ -86,7 +86,8 @@
     /* margin-top: 1%;
     margin-bottom: 3%; */
     margin:auto;
-    background-color: rgb(59, 57, 57);
+background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(0,212,255,1) 100%);
     border-radius: 25px;
 }
 
