--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -6,13 +6,18 @@
 } */
 
 input {
-    display: block;
-    padding: 12px 20px;
+
+    
+    text-align: center;
+    align-self: center;
+    display: flex;
+    /* padding: 12px 20px; */
     border: 1px solid #ccc;
-    margin: auto;
+    /* margin: auto; */
     width: 40vh;
+    padding-top: 1%;
     border-radius: 20px 20px;
-    margin-top: 3%;
+    /* margin-top: 3%; */
     outline: none;
 }
 
